--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,63 @@
-<ion-header [translucent]="true">
+<ion-header translucent>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ion-title> NMIMS</ion-title>
+  </ion-toolbar> </ion-header
+>
+<ion-content fullscreen>
+  <ion-card>
+    <img height="60%" src="https://images.pexels.com/photos/256490/pexels-photo-256490.jpeg?cs=srgb&dl=pexels-pixabay-256490.jpg&fm=jpg" />
+    <ion-card-header>
+      <ion-card-subtitle>Fill Out The Form</ion-card-subtitle>
+      <ion-card-title>Admission Form</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-label  position="floating">Name</ion-label>
+        <ion-input (ionBlur)="name_Check()" (ionBlur)="flag_Check()" (ionInput)="flag_Check()" required="true" placeholder="Enter text" [(ngModel)]="name1"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">Address</ion-label>
+        <ion-input (ionBlur)="add1_Check()" (ionBlur)="flag_Check()" (ionInput)="flag_Check()" placeholder="Address Line 1" [(ngModel)]="address_line1"></ion-input>
+        <ion-input (ionBlur)="add2_Check()" (ionBlur)="flag_Check()" (ionInput)="flag_Check()" placeholder="Address Line 2" [(ngModel)]="address_line2"></ion-input>
+        <ion-input (ionBlur)="city_Check()" (ionBlur)="flag_Check()" (ionInput)="flag_Check()" placeholder="City" [(ngModel)]="city"></ion-input>
+        <ion-input (ionBlur)="state_Check()" (ionBlur)="flag_Check()" (ionInput)="flag_Check()" placeholder="State" [(ngModel)]="state"></ion-input>
+        <ion-input (ionBlur)="zipcode_Check()" (ionBlur)="flag_Check()" (ionInput)="flag_Check()" placeholder="Zip Code" [(ngModel)]="zipcode"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input (ionBlur)="email_Check()" (ionBlur)="flag_Check()" (ionInput)="flag_Check()" type="email" placeholder="Enter text" [(ngModel)]="email"></ion-input>
+      </ion-item>
+      <ion-list>
+        <ion-radio-group #gendervalue (ionChange)="gender=gendervalue.value" (ionChange)="gender_Check()" (ionChange)="flag_Check()" [(ngModel)]="gendervalue.value">
+          <ion-list-header>
+            <ion-label>Gender</ion-label>
+          </ion-list-header>
+      
+          <ion-item>
+            <ion-label>Male</ion-label>
+            <ion-radio slot="start" value="male"></ion-radio>
+          </ion-item>
+      
+          <ion-item>
+            <ion-label>Female</ion-label>
+            <ion-radio slot="start" value="female"></ion-radio>
+          </ion-item>
+      
+          <ion-item>
+            <ion-label>Others</ion-label>
+            <ion-radio slot="start" value="others"></ion-radio>
+          </ion-item>
+        </ion-radio-group>
+      </ion-list>
+      <ion-item>
+        <ion-label>12th Marks</ion-label>
+        <ion-input (ionBlur)="marks12_Check()" (ionBlur)="flag_Check()" (ionInput)="flag_Check()" placeholder="in %" type="number" [(ngModel)]="marks_12"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>10th Marks</ion-label>
+        <ion-input (ionBlur)="marks10_Check()" (ionBlur)="flag_Check()" (ionInput)="flag_Check()" placeholder="in %" type="number" [(ngModel)]="marks_10"></ion-input>
+      </ion-item>
+      <ion-button disabled="{{flag_filled}}" color="success" (click)="submitData()" expand="block">Submit</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
